--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "hieu-le/active": "~2.0",
         "arcanedev/log-viewer": "~4.0",
         "arcanedev/no-captcha": "~3.0",
-        "yajra/laravel-datatables-oracle": "~6.0"
+        "yajra/laravel-datatables-oracle": "~6.0",
+        "skecskes/calendar": "0.2.*"
+
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
